--- a/src/components/TaskForm.css
+++ b/src/components/TaskForm.css
@@ -21,19 +21,35 @@
     width: 100%;
 }
 
+.task_input::placeholder {
+    color: #696969;
+}
+
 .task_form_bottom_line {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.tag {
-    font-size: 14px;
+.task_status {
+    font-size: 16px;
     font-weight: 500;
-    background-color: #f9f9f9;
-    border: 1px solid #dfe3e6;
+    border: 1px #999 solid;
     border-radius: 5px;
-    padding: 2px 10px;
-    margin-right: 10px;
+    width: 120px;
+    height: 30px;
+    padding: 0 5px;
+}
+
+.task_submit {
+    font-size: 16px;
+    font-weight: 500;
+    background-color: #6457f9;
+    color: #fff;
+    border-radius: 5px;
+    height: 30px;
+    padding: 3px 13px;
+    margin-left: 10px;
+    border: none;
     cursor: pointer;
 }
