set task and status section

--- a/src/components/TaskCard.css
+++ b/src/components/TaskCard.css
@@ -13,6 +13,12 @@
     margin-bottom: 15px;
 }
 
+.task_card_bottom_line {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
 .task_delete {
     width: 35px;
     height: 35px;
@@ -30,4 +36,10 @@
 
 .delete_icon {
     width: 20px;
+    opacity: 50%;
+    transition: all 0.3s ease-in-out;
+}
+
+.task_delete:hover .delete_icon {
+    opacity: 80%;
 }
